# formflow

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  config.yaml  docker-compose.dev.yml  docker-compose.yml  factory.py  form_engine.py  pdf_generator.py  pyproject.toml  requirements-dev.txt  requirements.txt  services.py  setup_dev.sh  smb-integration.patch  update_dependencies.sh
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: approve-copilot-ci.yml  ci.yml  release.yml
docs/: Architektur.md
formflow/: config.py  factory.py  form_engine.py  pdf_generator.py  routes.py  services.py
formflow/pdf_templates/: default_pdf.html
formflow/services/: form_engine.py  storage.py
formflow/templates/: base.html
forms/: equipment_return.yaml  notebook_handover.yaml  test_form.yaml  test_form2.yaml  test_form3.yaml  test_form4.yaml
forms/examples/: equipment_return.yaml  notebook_handover.yaml  test_form.yaml
pdf_templates/: default_pdf.html
src/formflow/: __init__.py  config.py  factory.py
src/formflow/routes/: main.py
src/formflow/services/: draft_service.py  form_engine.py  pdf_generator.py  storage.py
src/formflow/templates/: base.html  dynamic_form.html  preview.html
static/js/: form_handler.js  pdf_viewer.js
templates/: dynamic_form.html  form_list.html  index.html  preview.html  success.html
tests/: conftest.py  test_draft_routes.py  test_draft_services.py  test_edit_route.py  test_form_engine.py  test_pdf_generator.py  test_signature_label.py  test_smb_upload.py
wiki/: Architektur.md  Home.md
