[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "formflow"
version = "0.1.0"
description = "Dynamischer Formular- & PDF-Generator"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.3",
    "PyYAML==6.0.3",
    "gunicorn==25.1.0",
    "WeasyPrint==68.1",
    "smbprotocol==1.16.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "requests==2.32.5",
    "pytest-mock==3.15.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["formflow*"]

[tool.setuptools.package-data]
formflow = ["pdf_templates/*.html"]
