[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formflow"
version = "0.1.0"
description = "A dynamic form workflow system with PDF generation and SMB integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "Flask==3.1.3",
    "PyYAML==6.0.3",
    "gunicorn==25.1.0",
    "WeasyPrint==68.1",
    "smbprotocol==1.16.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "requests==2.32.5",
    "pytest-mock==3.15.1",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["formflow*"]

[tool.setuptools.package-data]
formflow = [
    "pdf_templates/*.html",
    "templates/*.html",
    "static/**/*",
]

#[tool.setuptools]
#packages = ["formflow"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (Import-Sortierung)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
